--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "chalk": "^1.0.0",
     "commander": "^2.8.1",
+    "fs-extra": "^0.18.3",
     "interpret": "^0.5.2",
     "liftoff": "^2.0.3",
     "lodash": "^3.8.0",
