--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   },
   "dependencies": {
     "chalk": "^1.0.0",
+    "cli-table": "^0.3.1",
+    "colors": "^1.1.0",
     "commander": "^2.8.1",
     "fs-extra": "^0.18.3",
     "interpret": "^0.5.2",
