--- a/.crawlerrc
+++ b/.crawlerrc
@@ -1,9 +1,10 @@
 var config = {
   startUrl: 'https://www.wustage.com/',
   requiredValues: 'www.wustage.com',
-  skippedValues: 'smart-captcha/, blog/',
+  skippedValues: 'smart-captcha/, blog/, paymentstatus.png',
   jsonPath: '.crawler/',
-  limit: 20,
+  limit: 200,
+  hashMode: false,
   userAgent: null,
   onComplete: null,
   nightmare: {
