--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A configurable web crawler to check the status of your links and errors",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/status-crawler.js",
+    "test": "mocha --recursive -c -R spec" 
   },
   "repository": {
     "type": "git",
@@ -33,8 +34,10 @@
   "homepage": "https://github.com/seethroughtrees/status-crawler#readme",
   "devDependencies": {
     "babel-eslint": "^3.1.1",
+    "chai": "^2.3.0",
     "eslint": "^0.21.0",
-    "jscs": "^1.13.1"
+    "jscs": "^1.13.1",
+    "mocha": "^2.2.5"
   },
   "dependencies": {
     "chalk": "^1.0.0",
