Refactored from tests

--- a/.crawlerrc
+++ b/.crawlerrc
@@ -4,7 +4,8 @@ var config = {
   skippedValues: 'smart-captcha/, blog/, paymentstatus.png',
   jsonPath: '.crawler/',
   sameHost: true,
-  limit: 20,
+  saveJson: true,
+  limit: 5,
   hashMode: false,
   userAgent: null,
   onComplete: null,
