--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "object-assign": "^2.0.0",
     "parse-domain": "^0.1.2",
     "require-dir": "^0.3.0",
+    "serialize": "^0.1.3",
+    "serialize-javascript": "^1.0.0",
     "v8flags": "^2.0.5",
     "weak": "^0.4.1"
   }
